--- a/wp-content/themes/ulrike-bernhard/assets/global/css/dywc.css
+++ b/wp-content/themes/ulrike-bernhard/assets/global/css/dywc.css
@@ -19,7 +19,7 @@
   color: #707070;
   transition: all 0.25s;
   width: calc(100% - 60px);
-  border: 2px solid #921a16;
+  border: 2px solid #555555;
   z-index: 1000;
   opacity: 1;
   max-width: 400px;
@@ -28,7 +28,7 @@
 
 #dywc > .content {
   padding: 15px;
-  background-color: #F2F2F2;
+  background-color: rgb(177, 178, 180);
   opacity: 0.92;
   text-align: center;
   z-index: 1;
@@ -72,7 +72,7 @@
 
 
 #dywc > .content > div {
-  background-color: #f1d793;
+  background-color: rgb(177, 178, 180);
   padding: 15px 0px;
   color: #000000;
   font-size: 14px;
@@ -139,10 +139,10 @@
 
 #dywc > .content > div .accept_wrap > a.accept {
   color: #ffffff;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   font-weight: bold;
   font-size: 1.1rem;
-  background-color: #921a16;
+  background-color: #555555;
   letter-spacing: 1px;
   padding: 8px 18px;
   text-decoration: none;
@@ -153,7 +153,7 @@
 #dywc > .content > div .accept_wrap > a.accept2 {
   font-size: 0.75em;
   text-decoration: none;
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Helvetica', 'Arial', sans-serif;
   font-size: 1.0em;
   text-transform: uppercase;
 }
@@ -164,7 +164,7 @@
   margin-right: -15px;
   margin-bottom: -15px;
   width: auto;
-  background-color: #DEDEDE;
+  background-color: rgb(177, 178, 180);
   font-size: 12px;
   line-height: 14px;
 }
@@ -188,7 +188,7 @@
   height: calc(100%);
   max-height: 100%;
   overflow-y: auto;
-  background-color: #F2F2F2;
+  background-color: rgb(177, 178, 180);
   transition: all 0.5s;
 }
 
@@ -214,7 +214,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  background-color: #DEDEDE;
+  background-color: rgb(177, 178, 180);
   margin: 0 0 1px 0;
   padding: 5px;
   box-sizing: border-box;
@@ -319,7 +319,7 @@
   flex-direction: row;
   justify-content: flex-start;
   align-items: flex-start;
-  background-color: #DEDEDE;
+  background-color: rgb(177, 178, 180);
   margin: 0 0 1px 0;
   padding: 2px 5px;
   box-sizing: border-box;
@@ -339,8 +339,17 @@
 
 
 #dywc_info .reject {
-    color: #FF0000;
+    color: #555555;
  }
+
+
+ #dywc_info .imprint {
+     color: #555555;
+  }
+
+  #dywc_info .dsg {
+     color: #555555;
+  }
 
 
  input[type=checkbox], input[type=radio] {
